--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Asset Tracking Platform Wireframes</title>
+      <link rel="icon" type="image/jpeg" href="#" id="favicon" />
     </head>
 
     <body>
