--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Asset Tracking Platform Wireframes</title>
+      <title>AssetTracker | Prototype | Intuvie</title>
       <link rel="icon" type="image/jpeg" href="#" id="favicon" />
     </head>
 
